manifests/example1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example1
spec:
  containers:
    - image: nbaynhamdevops/example1:latest
      name: example1
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
