manifests/health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example1
spec:
  containers:
    - image: nickbaynhamdevops/example1:latest
      name: example1
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
