manifests/kubia-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
  - image: nbaynhamdevops/kubia
    name: kubia
    livenessProbe:
      httpGet:
        path: /
        port: 8080
    ports:
    - containerPort: 8080
      protocol: TCP
