manifests/pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example1
spec:
  volumes:
    - name: "example-data"
      hostPath:
        path: "/var/lib/example"
  containers:
    - image: nbaynhamdevops/example1:latest
      name: example1
      volumeMounts:
        - mountPath: "/data"
          name: "example-data"
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
