manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-frontend-ingress
spec:
  rules:
  - host: "webserver1.192.168.1.43.nip.io"
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginx-frontend
            port:
              number: 8080:
